--- a/package.json
+++ b/package.json
@@ -20,17 +20,18 @@
     "@angular/router":  "2.0.0-rc.1",
     "@angular/router-deprecated":  "2.0.0-rc.1",
     "@angular/upgrade":  "2.0.0-rc.1",
-    "systemjs": "0.19.27",
+    "systemjs": "0.19.31",
     "core-js": "^2.4.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "^0.6.12",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "ng2-toasty": "^1.7.2"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
     "lite-server": "^2.2.0",
     "typescript": "^1.8.10",
-    "typings":"^0.8.1"
+    "typings":"^1.0.5"
   }
 }
