--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@angular/common":  "2.0.0-rc.2",
-    "@angular/compiler":  "2.0.0-rc.2",
-    "@angular/core":  "2.0.0-rc.2",
-    "@angular/forms": "0.1.0",
-    "@angular/http":  "2.0.0-rc.2",
-    "@angular/platform-browser":  "2.0.0-rc.2",
-    "@angular/platform-browser-dynamic":  "2.0.0-rc.2",
+    "@angular/common":  "2.0.0-rc.3",
+    "@angular/compiler":  "2.0.0-rc.3",
+    "@angular/core":  "2.0.0-rc.3",
+    "@angular/forms": "0.1.1",
+    "@angular/http":  "2.0.0-rc.3",
+    "@angular/platform-browser":  "2.0.0-rc.3",
+    "@angular/platform-browser-dynamic":  "2.0.0-rc.3",
     "@angular/router":  "3.0.0-alpha.7",
     "@angular/router-deprecated":  "2.0.0-rc.2",
-    "@angular/upgrade":  "2.0.0-rc.2",
+    "@angular/upgrade":  "2.0.0-rc.3",
 
     "systemjs": "0.19.31",
     "core-js": "^2.4.0",
@@ -29,7 +29,8 @@
     "zone.js": "^0.6.12",
 
     "bootstrap": "^3.3.6",
-    "ng2-toasty": "^1.7.2"
+    "ng2-toasty": "^1.7.2",
+    "font-awesome": "^4.6.3"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
